fixed spacing overflow

--- a/app/sass/components/_success.scss
+++ b/app/sass/components/_success.scss
@@ -42,25 +42,25 @@
 
 	&__field-name {
 		color: $color-red-light;
-		width: 10%;
+		width: 15%;
 		font-size: 2.2rem;
 		text-align: right;
 	}
 
 	&__name {
-		width: 85%;
+		width: 80%;
 		text-align: left;
 		font-size: 2rem;
 	}
 
 	&__email {
-		width: 85%;
+		width: 80%;
 		text-align: left;
 		font-size: 2rem;
 	}
 
 	&__message {
-		width: 85%;
+		width: 80%;
 		text-align: left;
 
 	}
